k8s_manifest/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-otel-ui
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-otel-ui
  template:
    metadata:
      labels:
        app: node-otel-ui
    spec:
      containers:
        - name: app
          image: sardarnoor1/node-otel-ui:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-otel-ui
  namespace: default
spec:
  selector:
    app: node-otel-ui
  ports:
    - port: 80
      targetPort: 3000
